feat: 3 planets, their values and diff algo

--- a/page.html
+++ b/page.html
@@ -10,7 +10,10 @@
 </head>
 
 <body class="root root_theme_initial">
-  <main class="content">
+  <button class="planet planet_type_top" type="button"></button>
+  <button class="planet planet_type_middle" type="button"></button>
+  <button class="planet planet_type_bottom" type="button"></button>
+  <main class="content popup">
     <button type="button" class="button button__close">X</button>
     <h1 class="content__title">Rock-paper-scissors</h1>
     <div class="content__container">
