refactor: procedural approach with some OOP elements

--- a/page.html
+++ b/page.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock-paper-scissors</title>
   <link rel="stylesheet" href="./index.css">
+  <link rel="icon" type="image/x-icon" href="./images/rock.svg">
 </head>
 
 <body class="root root_theme_initial">
