feat: stop animation on window "blured"

--- a/index.html
+++ b/index.html
@@ -35,12 +35,16 @@
       </div>
       <button type="button" class="button button__rock button__play" aria-label="Rock-button" value="Rock"></button>
       <button type="button" class="button button__play button__paper" aria-label="Paper-button" value="Paper"></button>
-      <button type="button" class="button button__play button__scissors" aria-label="Scissors-button" value="Scissors"></button>
+      <button type="button" class="button button__play button__scissors" aria-label="Scissors-button"
+        value="Scissors"></button>
       <button type="button" class="button button__surrender" aria-label="Surrender">Give up</button>
       <button type="button" class="button button__new-game" aria-label="Start new game">New game</button>
     </div>
   </main>
+  <footer></footer>
+
 
 </body>
 <script src="./scripts/script.js" type="module"></script>
+
 </html>
